# sql_system_transfer

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/sql_system_transfer/: character_set_dictionary.py  datatype.py  datatype_dictionary.py  engine.py  statements.py  system.py
tests/: test_character_set_dictionary.py  test_datatype.py  test_datatype_dictionary.py  test_engine.py  test_statements.py  test_system.py
