[metadata]
name = sql_system_transfer
version = 1.0
description = sql_table_transfer_python is a Python Library for transferring tables between SQL Systems
author = Matthew Cypert
license = MIT
license_file = LICENSE.txt
platforms = win32
classifiers =
    Programming Language :: Python :: 3.10 :: Only

[options]
packages =
    sql_system_transfer
install_requires =
    arrow==1.2.2
    atomicwrites==1.4.0
    attrs==21.4.0
    binaryornot==0.4.4
    certifi==2021.10.8
    chardet==4.0.0
    charset-normalizer==2.0.12
    click==8.0.4
    colorama==0.4.4
    cookiecutter==1.7.3
    coverage==6.3.3
    distlib==0.3.4
    filelock==3.7.0
    flake8==4.0.1
    frozendict==2.3.2
    idna==3.3
    iniconfig==1.1.1
    Jinja2==3.1.0
    jinja2-time==0.2.0
    MarkupSafe==2.1.1
    mccabe==0.6.1
    mypy==0.950
    mypy-extensions==0.4.3
    packaging==21.3
    platformdirs==2.5.2
    pluggy==1.0.0
    poyo==0.5.0
    py==1.11.0
    pycodestyle==2.8.0
    pyflakes==2.4.0
    pyodbc==4.0.32
    pyparsing==3.0.7
    pytest==7.0.0
    pytest-cov==3.0.0
    python-dateutil==2.8.2
    python-slugify==6.1.1
    requests==2.27.1
    six==1.16.0
    text-unidecode==1.3
    toml==0.10.2
    tomli==2.0.0
    tox==3.25.0
    typing_extensions==4.2.0
    urllib3==1.26.9
    virtualenv==20.14.1
python_requires = >=3.10
package_dir = =src
zip_safe = False

[options.extras_require]
testing =
    flake8==4.0.1
    tox==3.24.3
    pytest==7.0.0
    pytest-cov==3.0.0
    tox==3.25.0
    mypy==0.950

[options.package_data]
sql_system_transfer = py.typed

[flake8]
max-line-length = 160

